app/src/style.css
@import 'tailwindcss';

@theme {
  --shadow-right: 4px 0 8px 0 rgba(17, 24, 39, 0.25);
  --shadow-top: -4px 0 8px 0 rgba(17, 24, 39, 0.25);
}

@custom-variant dark (&:where(.dark, .dark *));

html,
body,
#app {
  width: 100%;
  height: 100%;
}

body {
  /* disable android pull to refresh feature */
  overflow-y: hidden;
}

*::-webkit-scrollbar {
  @apply bg-transparent w-3 h-3;
}

* {
  scrollbar-width: thin;
}

*::-webkit-scrollbar-thumb {
  transition: background 0.2s ease-in-out;
  border: 3px solid transparent;
  @apply bg-gray-500 dark:bg-neutral-800 rounded-full bg-clip-content;
}

*::-webkit-scrollbar-thumb:hover {
  @apply bg-gray-600 dark:bg-neutral-700;
}

*::-webkit-scrollbar-corner {
  @apply bg-transparent;
}

.prose * {
  @apply dark:text-white;
}

.prose a {
  @apply text-blue-500 dark:text-white;
}

